# LinChess

./: .gitignore  CMakeLists.txt  board.cpp  board.h  linchess  main.cpp  makefile  readme.md
.cache/clangd/index/: bitboard.cpp.81DCDD027D8F3C2E.idx  bitboard.hpp.EAF79CDDB2D282FA.idx  board.cpp.A6F1FC9FDC20531C.idx  board.hpp.A7399DE39B6E0BDD.idx  constants.hpp.F0B6FBF813696ACB.idx  linchess.cpp.8F3E0011D3316890.idx  magics.cpp.B5C3E7628BC8531A.idx  magics.hpp.0AD7ACCDC6104492.idx  nn.cpp.E64D7639DA641CE0.idx  nn.hpp.AB31941F48143A1B.idx  perft.cpp.F6C2111F861FE14F.idx
ChessGame/: Board.hpp  attack_bitboards.cpp  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  board_init.cpp  constants.hpp  magics.cpp  magics.hpp  perft.cpp  play_move.cpp
board/: board.h  board_init.cpp  board_piece_moves.cpp
include/chess/: bitboard.hpp  board.hpp  constants.hpp  magics.hpp  moves.hpp  types.hpp
src/: linchess.cpp
src/chess/: bitboard.cpp  board.cpp  magics.cpp  perft.cpp
src/nnue/: nn.cpp
